--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 certifi==2025.11.12
 charset-normalizer==3.4.4
+coverage==7.13.0
 idna==3.11
 pydantic==2.12.5
 pydantic_core==2.41.5
