--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,5 +63,5 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: dist-${{ github.ref_name }}
+          name: ${{ format('dist-{0}', replace(github.ref_name, '/', '-')) }}
           path: dist/*
